k8s/namespace.yaml
apiVersion: v1

kind: Namespace

metadata:

  name: employee-portal

  labels:

    app: employee-portal

    environment: prod
